--- a/src/pages/ChatApp.css
+++ b/src/pages/ChatApp.css
@@ -115,10 +115,18 @@
     color: white;
 }
 .drawer {
+    position: relative;
     background-color: rgb(30,30,30) !important;
-    height: 100%;
     color: white;
-
+    width: 100vw;
+    
+}
+.additional_drawer
+{
+    position: relative;
+    background-color: rgb(30,30,30) !important;
+    color: white;
+    height: 100%;
 }
 .drawer_input
 {
@@ -135,6 +143,7 @@
     color: white;
     cursor: pointer;
 }
+
 @media (max-width:991px)
 {
     .chat_name
